--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@ layout: compress
     {% include masthead.html %}
 
     {{ content }}
+    
+    <p style="text-align: center"><script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/map_v2.js?d=PPKP37KfrBwCXTc739iOGKm3I2VW3yb0Thzvy9P31iY&cl=ffffff&w=a"></script></p>
 
     <div class="page__footer">
       <footer>
